gitops/manifests/services/calculator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-service
  namespace: apps
  labels:
    app: calculator-service
spec:
  ingressClassName: nginx
  rules:
    - host: calculator.dev.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calculator-service
                port:
                  number: 80
